# Selenium_Pytest_Project

./: .pre-commit-config.yaml  .travis.yml  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
common/: constants.py  screenshot_def.py
locators/: personal_data_page_locators.py
models/: personal_data.py  sign_up.py
pages/: base_page.py  login_page.py  personal_data_page.py  sign_up_page.py
tests/auth/: test_auth.py
tests/personal_data/: test_personal_data.py
tests/sign_up/: test_sign_up.py
