[tool.poetry]
name = "selenium_pytest_project"
version = "0.8.5"
description = "Automation testing project on Python + Selenium + Pytest"
authors = ["Rodionov Maxim"]
license = "Apache License"

[tool.poetry.dependencies]
python = "3.8+"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
